--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>374 Tagged Open Ruby Bugs as of 2021-03-04 07:45:42 +0900</title>
+<title>371 Tagged Open Ruby Bugs as of 2021-03-05 07:20:12 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -23,8 +23,8 @@
 <input type="submit" value="fiber" />
 <input type="submit" value="regexp" />
 <input type="submit" value="arm" />
-<input type="submit" value="aix" />
 <input type="submit" value="solaris" />
+<input type="submit" value="aix" />
 <input type="submit" value="autoload" />
 <input type="submit" value="irb" />
 <input type="submit" value="unfixable" />
@@ -40,13 +40,12 @@
 <input type="submit" value="macos" />
 <input type="submit" value="mips" />
 <input type="submit" value="misc" />
-<input type="submit" value="openssl" />
-<input type="submit" value="uriencoding" /></p>
+<input type="submit" value="openssl" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">374</span> matched)
+(<span id="matched">371</span> matched)
 <table>
-<caption>374 Tagged Open Ruby Bugs as of 2021-03-04 07:45:42 +0900</caption>
+<caption>371 Tagged Open Ruby Bugs as of 2021-03-05 07:20:12 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -1406,10 +1405,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/14826">make: *** [.ext/include/sparc-solaris2.10/rb_mjit_min_header-2.6.0.h] Error 1 on Solaris 10 with very old gcc3</a>
 </td>
 </tr>
-<tr class=" lib ">
+<tr class=" patch lib ">
 <td><a href="https://bugs.ruby-lang.org/issues/14824">14824</a>
 </td>
-<td>lib</td>
+<td>patch lib</td>
 <td><a href="https://bugs.ruby-lang.org/issues/14824">Endless Range Support in irb</a>
 </td>
 </tr>
@@ -2057,13 +2056,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/11579">Fiddle.win32_last_error after calling Fiddle::Function#call isn&#39;t GetLastError()</a>
 </td>
 </tr>
-<tr class=" lib aix ">
-<td><a href="https://bugs.ruby-lang.org/issues/11533">11533</a>
-</td>
-<td>lib aix</td>
-<td><a href="https://bugs.ruby-lang.org/issues/11533">AIX6.1 - Ruby 2.2.3 - TestMkmf::TestConvertible#test_typeof_builtin fails</a>
-</td>
-</tr>
 <tr class=" lib maybenotbug ">
 <td><a href="https://bugs.ruby-lang.org/issues/11531">11531</a>
 </td>
@@ -2414,13 +2406,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/9115">Logger traps all exceptions; breaks Timeout</a>
 </td>
 </tr>
-<tr class=" lib uriencoding ">
-<td><a href="https://bugs.ruby-lang.org/issues/9045">9045</a>
-</td>
-<td>lib uriencoding</td>
-<td><a href="https://bugs.ruby-lang.org/issues/9045">URIに含まれるエンコードされたID/パスワードがデコードされない</a>
-</td>
-</tr>
 <tr class=" build ">
 <td><a href="https://bugs.ruby-lang.org/issues/9010">9010</a>
 </td>
@@ -2510,13 +2495,6 @@
 </td>
 <td>core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/8299">Minor error in float parsing</a>
-</td>
-</tr>
-<tr class=" lib ">
-<td><a href="https://bugs.ruby-lang.org/issues/8203">8203</a>
-</td>
-<td>lib</td>
-<td><a href="https://bugs.ruby-lang.org/issues/8203">Rinda: recycled object</a>
 </td>
 </tr>
 <tr class=" thread unfixable ">
