--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>371 Tagged Open Ruby Bugs as of 2021-03-05 07:20:12 +0900</title>
+<title>367 Tagged Open Ruby Bugs as of 2021-03-06 01:30:09 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -8,9 +8,9 @@
 <input type="submit" value="win" />
 <input type="submit" value="patch" />
 <input type="submit" value="build" />
-<input type="submit" value="lib" />
-<input type="submit" value="maybenotbug" />
 <input type="submit" value="ext" />
+<input type="submit" value="maybenotbug" />
+<input type="submit" value="lib" />
 <input type="submit" value="thread" />
 <input type="submit" value="encoding" />
 <input type="submit" value="notbug" />
@@ -43,9 +43,9 @@
 <input type="submit" value="openssl" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">371</span> matched)
+(<span id="matched">367</span> matched)
 <table>
-<caption>371 Tagged Open Ruby Bugs as of 2021-03-05 07:20:12 +0900</caption>
+<caption>367 Tagged Open Ruby Bugs as of 2021-03-06 01:30:09 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -817,13 +817,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/16805">Coroutine&#39;s license is unclear</a>
 </td>
 </tr>
-<tr class=" build ">
-<td><a href="https://bugs.ruby-lang.org/issues/16784">16784</a>
-</td>
-<td>build</td>
-<td><a href="https://bugs.ruby-lang.org/issues/16784">Compiling with --enable-load-relative and &quot;musl-gcc -static&quot; yields &quot;negative string size (or size too big) (ArgumentError)&quot; </a>
-</td>
-</tr>
 <tr class=" thread ">
 <td><a href="https://bugs.ruby-lang.org/issues/16782">16782</a>
 </td>
@@ -1405,13 +1398,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/14826">make: *** [.ext/include/sparc-solaris2.10/rb_mjit_min_header-2.6.0.h] Error 1 on Solaris 10 with very old gcc3</a>
 </td>
 </tr>
-<tr class=" patch lib ">
-<td><a href="https://bugs.ruby-lang.org/issues/14824">14824</a>
-</td>
-<td>patch lib</td>
-<td><a href="https://bugs.ruby-lang.org/issues/14824">Endless Range Support in irb</a>
-</td>
-</tr>
 <tr class=" tracepoint ">
 <td><a href="https://bugs.ruby-lang.org/issues/14817">14817</a>
 </td>
@@ -1734,13 +1720,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/13671">Regexp with lookbehind and case-insensitivity raises RegexpError only on strings with certain characters</a>
 </td>
 </tr>
-<tr class=" patch lib ">
-<td><a href="https://bugs.ruby-lang.org/issues/13654">13654</a>
-</td>
-<td>patch lib</td>
-<td><a href="https://bugs.ruby-lang.org/issues/13654">irb save-history extension is not concurrency-safe</a>
-</td>
-</tr>
 <tr class=" win test ">
 <td><a href="https://bugs.ruby-lang.org/issues/13644">13644</a>
 </td>
@@ -1893,13 +1872,6 @@
 </td>
 <td>core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/12540">test failures when SHARABLE_MIDDLE_SUBSTRING=1</a>
-</td>
-</tr>
-<tr class=" lib ">
-<td><a href="https://bugs.ruby-lang.org/issues/12538">12538</a>
-</td>
-<td>lib</td>
-<td><a href="https://bugs.ruby-lang.org/issues/12538">hostsを書き換えてwebrickで書いたプロキシ―に繋いでいるとrubyが落ちる</a>
 </td>
 </tr>
 <tr class=" cygwin ">
@@ -2126,13 +2098,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/11230">Should rb_struct_s_members() be public API?</a>
 </td>
 </tr>
-<tr class=" lib ">
-<td><a href="https://bugs.ruby-lang.org/issues/11194">11194</a>
-</td>
-<td>lib</td>
-<td><a href="https://bugs.ruby-lang.org/issues/11194">Refactor env-sourced proxy logic for uri/generic</a>
-</td>
-</tr>
 <tr class=" core ">
 <td><a href="https://bugs.ruby-lang.org/issues/11183">11183</a>
 </td>
@@ -2187,6 +2152,13 @@
 </td>
 <td>patch core maybenotbug</td>
 <td><a href="https://bugs.ruby-lang.org/issues/11063">Special singleton class should return true for singleton_class? test</a>
+</td>
+</tr>
+<tr class=" ext ">
+<td><a href="https://bugs.ruby-lang.org/issues/10961">10961</a>
+</td>
+<td>ext</td>
+<td><a href="https://bugs.ruby-lang.org/issues/10961">Zlib corrupts data when receive signal</a>
 </td>
 </tr>
 <tr class=" lib ">
