--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>366 Tagged Open Ruby Bugs as of 2021-03-06 10:06:10 +0900</title>
+<title>366 Tagged Open Ruby Bugs as of 2021-03-09 02:23:52 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -43,7 +43,7 @@
 <input id="filter" type="text" size="80" />
 (<span id="matched">366</span> matched)
 <table>
-<caption>366 Tagged Open Ruby Bugs as of 2021-03-06 10:06:10 +0900</caption>
+<caption>366 Tagged Open Ruby Bugs as of 2021-03-09 02:23:52 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -53,10 +53,31 @@
 </thead>
 <tbody>
 <tr class=" ractor ">
-<td><a href="https://bugs.ruby-lang.org/issues/17672">17672</a>
+<td><a href="https://bugs.ruby-lang.org/issues/17679">17679</a>
 </td>
 <td>ractor</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17672">Ractor stdio does not belong to the ractor</a>
+<td><a href="https://bugs.ruby-lang.org/issues/17679">Ractor incoming channel can consume unlimited resources</a>
+</td>
+</tr>
+<tr class=" ractor ">
+<td><a href="https://bugs.ruby-lang.org/issues/17678">17678</a>
+</td>
+<td>ractor</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17678">Ractors do not restart after fork</a>
+</td>
+</tr>
+<tr class=" ractor ">
+<td><a href="https://bugs.ruby-lang.org/issues/17677">17677</a>
+</td>
+<td>ractor</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17677">Ractor crashes fork when blocking</a>
+</td>
+</tr>
+<tr class=" ractor ">
+<td><a href="https://bugs.ruby-lang.org/issues/17676">17676</a>
+</td>
+<td>ractor</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17676">Accessing ENV from Ractor raises IsolationError</a>
 </td>
 </tr>
 <tr class=" core ">
@@ -92,13 +113,6 @@
 </td>
 <td>patch core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/17661">IO#each will segfault when if file is closed inside an `each_byte` block</a>
-</td>
-</tr>
-<tr class=" ractor ">
-<td><a href="https://bugs.ruby-lang.org/issues/17659">17659</a>
-</td>
-<td>ractor</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17659">Ractor: can&#39;t call io/wait methods</a>
 </td>
 </tr>
 <tr class=" patch core ">
@@ -141,13 +155,6 @@
 </td>
 <td>patch build</td>
 <td><a href="https://bugs.ruby-lang.org/issues/17645">`make` stops at `file.c` with Clang 11.1.0 for 32-bit GNU/Linux targets (maybe Y2038?)</a>
-</td>
-</tr>
-<tr class=" core ">
-<td><a href="https://bugs.ruby-lang.org/issues/17643">17643</a>
-</td>
-<td>core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17643">Ruby 3 embedded - no GC methods?</a>
 </td>
 </tr>
 <tr class=" maybenotbug ">
@@ -526,13 +533,6 @@
 </td>
 <td>fiber perf</td>
 <td><a href="https://bugs.ruby-lang.org/issues/17263">Fiber context switch degrades with number of fibers, limit on number of fibers</a>
-</td>
-</tr>
-<tr class=" core ">
-<td><a href="https://bugs.ruby-lang.org/issues/17216">17216</a>
-</td>
-<td>core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17216">Enumerator::Chain doesn&#39;t support all Enumerator methods</a>
 </td>
 </tr>
 <tr class=" build ">
