--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>366 Tagged Open Ruby Bugs as of 2021-03-09 02:23:52 +0900</title>
+<title>364 Tagged Open Ruby Bugs as of 2021-03-10 07:43:13 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -41,9 +41,9 @@
 <input type="submit" value="misc" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">366</span> matched)
+(<span id="matched">364</span> matched)
 <table>
-<caption>366 Tagged Open Ruby Bugs as of 2021-03-09 02:23:52 +0900</caption>
+<caption>364 Tagged Open Ruby Bugs as of 2021-03-10 07:43:13 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -52,6 +52,13 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" lib maybenotbug ">
+<td><a href="https://bugs.ruby-lang.org/issues/17680">17680</a>
+</td>
+<td>lib maybenotbug</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17680">tab completion no longer works on irb3.0</a>
+</td>
+</tr>
 <tr class=" ractor ">
 <td><a href="https://bugs.ruby-lang.org/issues/17679">17679</a>
 </td>
@@ -1060,13 +1067,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/15856">Performance of redundant `Kernel.require` is slow when many gems are activated</a>
 </td>
 </tr>
-<tr class=" core win ">
-<td><a href="https://bugs.ruby-lang.org/issues/15852">15852</a>
-</td>
-<td>core win</td>
-<td><a href="https://bugs.ruby-lang.org/issues/15852">APPLICATION_VERIFIER_LOCKS_LOCK_IN_FREED_HEAP on exiting ruby</a>
-</td>
-</tr>
 <tr class=" core autoload ">
 <td><a href="https://bugs.ruby-lang.org/issues/15790">15790</a>
 </td>
@@ -1170,13 +1170,6 @@
 </td>
 <td>win</td>
 <td><a href="https://bugs.ruby-lang.org/issues/15550">Windows - gem bin files - can&#39;t run from bash shell</a>
-</td>
-</tr>
-<tr class=" lib encoding ">
-<td><a href="https://bugs.ruby-lang.org/issues/15517">15517</a>
-</td>
-<td>lib encoding</td>
-<td><a href="https://bugs.ruby-lang.org/issues/15517">Net::HTTP not recognizing valid UTF-8</a>
 </td>
 </tr>
 <tr class=" thread ">
@@ -1739,10 +1732,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/13542">MinGW trunk Builds - Summary of Issues</a>
 </td>
 </tr>
-<tr class=" lib ">
+<tr class=" patch lib ">
 <td><a href="https://bugs.ruby-lang.org/issues/13513">13513</a>
 </td>
-<td>lib</td>
+<td>patch lib</td>
 <td><a href="https://bugs.ruby-lang.org/issues/13513">Resolv::DNS::Message.decode hangs after detecting truncation in UDP messages</a>
 </td>
 </tr>
@@ -2150,13 +2143,6 @@
 </td>
 <td>patch core maybenotbug</td>
 <td><a href="https://bugs.ruby-lang.org/issues/11063">Special singleton class should return true for singleton_class? test</a>
-</td>
-</tr>
-<tr class=" ext ">
-<td><a href="https://bugs.ruby-lang.org/issues/10961">10961</a>
-</td>
-<td>ext</td>
-<td><a href="https://bugs.ruby-lang.org/issues/10961">Zlib corrupts data when receive signal</a>
 </td>
 </tr>
 <tr class=" lib ">
