--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>364 Tagged Open Ruby Bugs as of 2021-03-10 07:43:13 +0900</title>
+<title>361 Tagged Open Ruby Bugs as of 2021-03-11 05:12:21 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -9,12 +9,12 @@
 <input type="submit" value="patch" />
 <input type="submit" value="build" />
 <input type="submit" value="maybenotbug" />
-<input type="submit" value="ext" />
-<input type="submit" value="lib" />
 <input type="submit" value="thread" />
+<input type="submit" value="lib" />
+<input type="submit" value="ext" />
 <input type="submit" value="encoding" />
-<input type="submit" value="notbug" />
 <input type="submit" value="test" />
+<input type="submit" value="notbug" />
 <input type="submit" value="ractor" />
 <input type="submit" value="cygwin" />
 <input type="submit" value="perf" />
@@ -41,9 +41,9 @@
 <input type="submit" value="misc" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">364</span> matched)
+(<span id="matched">361</span> matched)
 <table>
-<caption>364 Tagged Open Ruby Bugs as of 2021-03-10 07:43:13 +0900</caption>
+<caption>361 Tagged Open Ruby Bugs as of 2021-03-11 05:12:21 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -358,13 +358,6 @@
 </td>
 <td>ractor</td>
 <td><a href="https://bugs.ruby-lang.org/issues/17513">Methods of shareable objects and UnboundMethods should be shareable</a>
-</td>
-</tr>
-<tr class=" lib ">
-<td><a href="https://bugs.ruby-lang.org/issues/17508">17508</a>
-</td>
-<td>lib</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17508">io-console versioning</a>
 </td>
 </tr>
 <tr class=" thread ">
@@ -906,10 +899,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/16612">Enumerator::ArithmeticSequence#last with float range produces incorrect value</a>
 </td>
 </tr>
-<tr class=" ext ">
+<tr class=" patch ext ">
 <td><a href="https://bugs.ruby-lang.org/issues/16608">16608</a>
 </td>
-<td>ext</td>
+<td>patch ext</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16608">ConditionVariable#wait should return false when timeout exceeded</a>
 </td>
 </tr>
@@ -976,10 +969,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/16371">Inconsistent usage of Double splat operator</a>
 </td>
 </tr>
-<tr class=" ext ">
+<tr class=" patch ext ">
 <td><a href="https://bugs.ruby-lang.org/issues/16368">16368</a>
 </td>
-<td>ext</td>
+<td>patch ext</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16368">Error in `YAML.load(symbolize_names: true)` with null column YAML</a>
 </td>
 </tr>
@@ -1100,13 +1093,6 @@
 </td>
 <td>core thread</td>
 <td><a href="https://bugs.ruby-lang.org/issues/15735">Thread#handle_interrupt does not prevent Thread#kill from interrupting</a>
-</td>
-</tr>
-<tr class=" ext encoding ">
-<td><a href="https://bugs.ruby-lang.org/issues/15718">15718</a>
-</td>
-<td>ext encoding</td>
-<td><a href="https://bugs.ruby-lang.org/issues/15718">YAML raises error when dumping strings with UTF32 encoding</a>
 </td>
 </tr>
 <tr class=" core ">
@@ -1431,10 +1417,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/14727">TestQueue#test_queue_with_trap always timeout on Windows10</a>
 </td>
 </tr>
-<tr class=" ext ">
+<tr class=" patch ext ">
 <td><a href="https://bugs.ruby-lang.org/issues/14716">14716</a>
 </td>
-<td>ext</td>
+<td>patch ext</td>
 <td><a href="https://bugs.ruby-lang.org/issues/14716">SecureRandom throwing an error in Ruby 2.5.1</a>
 </td>
 </tr>
@@ -1618,13 +1604,6 @@
 </td>
 <td>regexp</td>
 <td><a href="https://bugs.ruby-lang.org/issues/14103">Regexp absense operator has no chance to ^C</a>
-</td>
-</tr>
-<tr class=" ext ">
-<td><a href="https://bugs.ruby-lang.org/issues/14096">14096</a>
-</td>
-<td>ext</td>
-<td><a href="https://bugs.ruby-lang.org/issues/14096">Psych allows invalid single quote escape character</a>
 </td>
 </tr>
 <tr class=" core ">
@@ -1816,10 +1795,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/12689">Thread isolation of $~ and $_</a>
 </td>
 </tr>
-<tr class=" ext ">
+<tr class=" patch test ext ">
 <td><a href="https://bugs.ruby-lang.org/issues/12666">12666</a>
 </td>
-<td>ext</td>
+<td>patch test ext</td>
 <td><a href="https://bugs.ruby-lang.org/issues/12666">Fatal error: glibc detected an invalid stdio handle</a>
 </td>
 </tr>
