--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>361 Tagged Open Ruby Bugs as of 2021-03-11 05:12:21 +0900</title>
+<title>360 Tagged Open Ruby Bugs as of 2021-03-11 07:43:04 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -13,8 +13,8 @@
 <input type="submit" value="lib" />
 <input type="submit" value="ext" />
 <input type="submit" value="encoding" />
-<input type="submit" value="test" />
 <input type="submit" value="notbug" />
+<input type="submit" value="test" />
 <input type="submit" value="ractor" />
 <input type="submit" value="cygwin" />
 <input type="submit" value="perf" />
@@ -41,9 +41,9 @@
 <input type="submit" value="misc" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">361</span> matched)
+(<span id="matched">360</span> matched)
 <table>
-<caption>361 Tagged Open Ruby Bugs as of 2021-03-11 05:12:21 +0900</caption>
+<caption>360 Tagged Open Ruby Bugs as of 2021-03-11 07:43:04 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -1795,13 +1795,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/12689">Thread isolation of $~ and $_</a>
 </td>
 </tr>
-<tr class=" patch test ext ">
-<td><a href="https://bugs.ruby-lang.org/issues/12666">12666</a>
-</td>
-<td>patch test ext</td>
-<td><a href="https://bugs.ruby-lang.org/issues/12666">Fatal error: glibc detected an invalid stdio handle</a>
-</td>
-</tr>
 <tr class=" encoding test ">
 <td><a href="https://bugs.ruby-lang.org/issues/12597">12597</a>
 </td>
@@ -2516,10 +2509,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/6124">remove the &quot;spec-only gems&quot; in Ruby 1.9.3 (was What is the purpose of &quot;fake&quot; gems in Ruby)</a>
 </td>
 </tr>
-<tr class=" core ext ">
+<tr class=" patch core ext ">
 <td><a href="https://bugs.ruby-lang.org/issues/6120">6120</a>
 </td>
-<td>core ext</td>
+<td>patch core ext</td>
 <td><a href="https://bugs.ruby-lang.org/issues/6120">Float and BigDecimal bug in remainder in corner cases</a>
 </td>
 </tr>
